# Convo-Ai

./: .gitignore  .windsurfrules  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.json  docker-compose.with-ollama.yml  docker-compose.yml  howto.md  pyproject.toml  requirements.txt  server.py  talk.py
.github/workflows/: ci.yml  deploy-website.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: take_real_screenshots.mjs  take_screenshots.mjs  take_website_screenshots.mjs  test_websocket.py
src/convo_ai/: __init__.py  cli.py  config.py
src/convo_ai/api/: __init__.py  app.py
src/convo_ai/client/: __init__.py  cli.py
src/convo_ai/services/: __init__.py  database.py  memory.py  ollama.py  prompt.py  stt.py  tts.py
templates/: index.html
tests/: test_api.py  test_client.py  test_config.py  test_database.py  test_ollama.py
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
website/src/: App.tsx  index.css
